Replaced About Image

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,7 +11,7 @@
 <body>
     <div class="main-content">
         {{>header}}
-        <img src="/images/1.jpg" class="portrait" alt="Image 1">
+        <img src="/images/me.jpg" class="portrait" alt="Image 1">
         {{>footer}}
     </div>
 </body>
