--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,6 +11,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>This site was created by Abiodun Sulaiman. It uses data from mapbox.com and darksky.net</p>
         <img src="/images/me.jpg" class="portrait" alt="Image 1">
         {{>footer}}
     </div>
