Added ReadMe and more info on weather forecast

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -12,7 +12,7 @@
     <div class="main-content">
         {{>header}}
         <p>
-            Thanks for coming
+            Welcome to my Weather App
         </p>
         <form>
             <input />
