Modified about page

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,7 +11,19 @@
 <body>
     <div class="main-content">
         {{>header}}
-        <p>This site was created by Abiodun Sulaiman. It uses data from mapbox.com and darksky.net</p>
+        <p>This site was created by Abiodun Sulaiman.
+
+            <strong>
+                <a target="_blank" href="https://twitter.com/future4christ">Find me on Twitter</a>
+            </strong>
+            <em>or</em>
+            <strong>
+                <a target="_blank" href="https://github.com/abiodunsulaiman694">Github</a>
+            </strong>
+        </p>
+
+        <p>
+            It uses data from mapbox.com and darksky.net</p>
         <img src="/images/me.jpg" class="portrait" alt="Image 1">
         {{>footer}}
     </div>
